src/Linux/ctrlEval/parserEval.output
Terminals unused in grammar

   SPACE


Grammar

    0 $accept: abssyn $end

    1 abssyn: ArchCfg

    2 ArchCfg: Conjunto ArchCfg
    3        | Conjunto

    4 Conjunto: SET NUMBER OPENBRACE Assignments CLOSEBRACE

    5 Assignments: Assignment Assignments
    6            | Assignment

    7 Assignment: ID EQUAL Exp SEMICOLON

    8 Exp: Exp PLUS Exp
    9    | Exp FACT Exp
   10    | Exp LESS Exp
   11    | Exp SUBS Exp
   12    | NUMBER
   13    | ID
   14    | OPENPAR Exp CLOSEPAR


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 4 12
ID (259) 7 13
SET (260) 4
PLUS (261) 8
LESS (262) 10
FACT (263) 9
SUBS (264) 11
OPENBRACE (265) 4
CLOSEBRACE (266) 4
OPENPAR (267) 14
CLOSEPAR (268) 14
EQUAL (269) 7
SEMICOLON (270) 7
SPACE (271)


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
abssyn (18)
    on left: 1, on right: 0
ArchCfg (19)
    on left: 2 3, on right: 1 2
Conjunto (20)
    on left: 4, on right: 2 3
Assignments (21)
    on left: 5 6, on right: 4 5
Assignment (22)
    on left: 7, on right: 5 6
Exp (23)
    on left: 8 9 10 11 12 13 14, on right: 7 8 9 10 11 14


State 0

    0 $accept: . abssyn $end

    SET  shift, and go to state 1

    abssyn    go to state 2
    ArchCfg   go to state 3
    Conjunto  go to state 4


State 1

    4 Conjunto: SET . NUMBER OPENBRACE Assignments CLOSEBRACE

    NUMBER  shift, and go to state 5


State 2

    0 $accept: abssyn . $end

    $end  shift, and go to state 6


State 3

    1 abssyn: ArchCfg .

    $default  reduce using rule 1 (abssyn)


State 4

    2 ArchCfg: Conjunto . ArchCfg
    3        | Conjunto .

    SET  shift, and go to state 1

    $default  reduce using rule 3 (ArchCfg)

    ArchCfg   go to state 7
    Conjunto  go to state 4


State 5

    4 Conjunto: SET NUMBER . OPENBRACE Assignments CLOSEBRACE

    OPENBRACE  shift, and go to state 8


State 6

    0 $accept: abssyn $end .

    $default  accept


State 7

    2 ArchCfg: Conjunto ArchCfg .

    $default  reduce using rule 2 (ArchCfg)


State 8

    4 Conjunto: SET NUMBER OPENBRACE . Assignments CLOSEBRACE

    ID  shift, and go to state 9

    Assignments  go to state 10
    Assignment   go to state 11


State 9

    7 Assignment: ID . EQUAL Exp SEMICOLON

    EQUAL  shift, and go to state 12


State 10

    4 Conjunto: SET NUMBER OPENBRACE Assignments . CLOSEBRACE

    CLOSEBRACE  shift, and go to state 13


State 11

    5 Assignments: Assignment . Assignments
    6            | Assignment .

    ID  shift, and go to state 9

    $default  reduce using rule 6 (Assignments)

    Assignments  go to state 14
    Assignment   go to state 11


State 12

    7 Assignment: ID EQUAL . Exp SEMICOLON

    NUMBER   shift, and go to state 15
    ID       shift, and go to state 16
    OPENPAR  shift, and go to state 17

    Exp  go to state 18


State 13

    4 Conjunto: SET NUMBER OPENBRACE Assignments CLOSEBRACE .

    $default  reduce using rule 4 (Conjunto)


State 14

    5 Assignments: Assignment Assignments .

    $default  reduce using rule 5 (Assignments)


State 15

   12 Exp: NUMBER .

    $default  reduce using rule 12 (Exp)


State 16

   13 Exp: ID .

    $default  reduce using rule 13 (Exp)


State 17

   14 Exp: OPENPAR . Exp CLOSEPAR

    NUMBER   shift, and go to state 15
    ID       shift, and go to state 16
    OPENPAR  shift, and go to state 17

    Exp  go to state 19


State 18

    7 Assignment: ID EQUAL Exp . SEMICOLON
    8 Exp: Exp . PLUS Exp
    9    | Exp . FACT Exp
   10    | Exp . LESS Exp
   11    | Exp . SUBS Exp

    PLUS       shift, and go to state 20
    LESS       shift, and go to state 21
    FACT       shift, and go to state 22
    SUBS       shift, and go to state 23
    SEMICOLON  shift, and go to state 24


State 19

    8 Exp: Exp . PLUS Exp
    9    | Exp . FACT Exp
   10    | Exp . LESS Exp
   11    | Exp . SUBS Exp
   14    | OPENPAR Exp . CLOSEPAR

    PLUS      shift, and go to state 20
    LESS      shift, and go to state 21
    FACT      shift, and go to state 22
    SUBS      shift, and go to state 23
    CLOSEPAR  shift, and go to state 25


State 20

    8 Exp: Exp PLUS . Exp

    NUMBER   shift, and go to state 15
    ID       shift, and go to state 16
    OPENPAR  shift, and go to state 17

    Exp  go to state 26


State 21

   10 Exp: Exp LESS . Exp

    NUMBER   shift, and go to state 15
    ID       shift, and go to state 16
    OPENPAR  shift, and go to state 17

    Exp  go to state 27


State 22

    9 Exp: Exp FACT . Exp

    NUMBER   shift, and go to state 15
    ID       shift, and go to state 16
    OPENPAR  shift, and go to state 17

    Exp  go to state 28


State 23

   11 Exp: Exp SUBS . Exp

    NUMBER   shift, and go to state 15
    ID       shift, and go to state 16
    OPENPAR  shift, and go to state 17

    Exp  go to state 29


State 24

    7 Assignment: ID EQUAL Exp SEMICOLON .

    $default  reduce using rule 7 (Assignment)


State 25

   14 Exp: OPENPAR Exp CLOSEPAR .

    $default  reduce using rule 14 (Exp)


State 26

    8 Exp: Exp . PLUS Exp
    8    | Exp PLUS Exp .
    9    | Exp . FACT Exp
   10    | Exp . LESS Exp
   11    | Exp . SUBS Exp

    FACT  shift, and go to state 22
    SUBS  shift, and go to state 23

    $default  reduce using rule 8 (Exp)


State 27

    8 Exp: Exp . PLUS Exp
    9    | Exp . FACT Exp
   10    | Exp . LESS Exp
   10    | Exp LESS Exp .
   11    | Exp . SUBS Exp

    FACT  shift, and go to state 22
    SUBS  shift, and go to state 23

    $default  reduce using rule 10 (Exp)


State 28

    8 Exp: Exp . PLUS Exp
    9    | Exp . FACT Exp
    9    | Exp FACT Exp .
   10    | Exp . LESS Exp
   11    | Exp . SUBS Exp

    $default  reduce using rule 9 (Exp)


State 29

    8 Exp: Exp . PLUS Exp
    9    | Exp . FACT Exp
   10    | Exp . LESS Exp
   11    | Exp . SUBS Exp
   11    | Exp SUBS Exp .

    $default  reduce using rule 11 (Exp)
